# mc_phidget_pressure_sensor

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
etc/: PhidgetPressureSensorPlugin.in.yaml  PhidgetPressureSensorPlugin.yaml
src/: PhidgetPressureSensorDAQ.cpp  PhidgetPressureSensorDAQ.h  PhidgetPressureSensorPlugin.cpp  PhidgetPressureSensorPlugin.h
tests/: CMakeLists.txt  testPhidgetPressureSensor.cpp
tests/etc/: mc_rtc.yaml
